@@ -1,3 +1,8 @@
+2003-02-03  Jody Goldberg <jody@gnome.org>
+
+	* pln.c (pln_file_open) : no need to probe.  Gnumeric has already
+	  taken care of that.
+
 2003-01-28  Jody Goldberg <jody@gnome.org>
 
 	* Release 1.1.16
